k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: magi
  namespace: m324-csbe-birchler 
  labels:
    app: magi
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: magi
  template:
    metadata:
      labels:
        app: magi
    spec:
      containers:
        - name: magi
          image: mtirx/m324lb01${IMAGE_TAG}
          command:
            - /bin/sh
            - "-c"
            - yarn start
          startupProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            failureThreshold: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: http
            failureThreshold: 3
            periodSeconds: 5
          ports:
            - name: http
              containerPort: 3000
          resources:
            requests:
              cpu: 25m
              memory: 256Mi
            limits:
              cpu: 200m
              memory: 512Mi
